# folios

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  llms-install.md  mkdocs.yml  pyproject.toml  smithery.yaml
.claude-plugin/: marketplace.json
.github/workflows/: docs.yml  publish.yml
docs/: api-reference.md  configuration.md  document-format.md  index.md  installation.md  privacy.md  troubleshooting.md
docs/tools/: compare.md  get-document.md  get-metadata.md  index.md  list-documents.md  list-versions.md
examples/documents/: 123456_v1.md  123456_v2.md  200001_v1.md  200002_v1.md  789012_v1.md  folios.toml
examples/documents/.mcp_resources/: how-to-propose-changes.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
src/alexandria/: __init__.py  server.py
src/folios/: __init__.py  server.py
tests/: conftest.py  test_cli.py  test_config.py  test_edge_cases.py  test_image_resources.py  test_parsing.py  test_remote_drive_errors.py  test_resources.py  test_schema.py  test_tools.py
