[project]
name = "folios"
version = "0.4.1"
description = "MCP server for versioned document retrieval, metadata access, and diff capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alejandro Pradas Gómez", email = "alex@pradas.eu" }]
keywords = ["mcp", "documents", "versioning", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/alex-pradas/folios"
Repository = "https://github.com/alex-pradas/folios"
Documentation = "https://alex-pradas.github.io/folios"

[project.scripts]
folios = "folios.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folios"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
